# gesture-z1

./: GESTURE_README.md  README.md  gesture-env.yml
devel/: .catkin
devel/lib/pkgconfig/: a1_description.pc  aliengoZ1_description.pc  aliengo_description.pc  b1_description.pc  go1_description.pc  laikago_description.pc  unitree_controller.pc  unitree_gazebo.pc  unitree_legged_control.pc  unitree_legged_msgs.pc  unitree_legged_real.pc  unitree_legged_sdk.pc  z1_bringup.pc  z1_controller.pc  z1_description.pc  z1_examples.pc  z1_hw.pc  z1_leap_integration.pc  z1_moveit_config.pc  z1_rviz.pc  z1_sdk.pc
devel/lib/unitree_controller/: unitree_external_force  unitree_move_kinetic  unitree_servo
devel/lib/unitree_legged_real/: control_via_keyboard  ros_example_position  ros_example_walk  ros_udp  state_sub  twist_sub
devel/lib/unitree_legged_sdk/: example_joystick  example_position  example_torque  example_velocity  example_walk
devel/lib/z1_examples/: move_group_interface  ros_gripper_ctrl
devel/lib/z1_hw/: z1_hw_node
devel/lib/z1_sdk/: example_joint_ctrl  example_lowcmd
src/Z1-LeapC/: requirements.txt
src/Z1-LeapC/models/: scaler_19f.pkl  (+3 more)
src/z1_bridge/: CMakeLists.txt  package.xml
src/z1_controller/: CMakeLists.txt
src/z1_leap_integration/: CMakeLists.txt
src/z1_sdk/: CMakeLists.txt  README.md
src/z1_sdk/scripts/: collector.py  control_z1.py  example_joint_ctrl.py  example_lowcmd.py  gesture_controller.py  gesture_mlp_20251201_164331.pt  gesture_mlp_20251201_164331_history.json  test_actions.py  train_gesture_mlp.py
src/z1_sdk/scripts/data/: gesture_data_20251201_163006.csv  gesture_data_20251201_163006_meta.json
src/z1_sdk/scripts/z1_core/: __init__.py  arm_interface.py  control_modes.py  kinematics.py  safety.py  trajectory.py
(+753 files in other folders)
